// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemurinDownloadTable component > renders correctly - no data 1`] = `
<div>
  <table
    class="table table-bordered releases-table"
    id="download-table"
    style="border-spacing: 0 10px; border-collapse: separate;"
  >
    <tbody
      class="table-light"
    >
      <tr />
    </tbody>
  </table>
</div>
`;

exports[`TemurinDownloadTable component > renders correctly - with source 1`] = `
<div>
  <p>
    <a
      href="/temurin/release-notes?version=mock-release-name"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h12v-2H3v2zM3 6v2h18V6H3zm0 7h18v-2H3v2z"
        />
      </svg>
       
      Text
    </a>
  </p>
  <table
    class="table table-bordered releases-table"
    id="download-table"
    style="border-spacing: 0 10px; border-collapse: separate;"
  >
    <tbody
      class="table-light"
    >
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white text-muted"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white text-muted"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="installer_checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    installer_extension_mock
                  </a>
                </td>
              </tr>
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <p>
    <a
      href="https://mock-link"
    >
      mock-release-name
       
      Text
    </a>
  </p>
</div>
`;

exports[`TemurinDownloadTable component > renders correctly 1`] = `
<div>
  <table
    class="table table-bordered releases-table"
    id="download-table"
    style="border-spacing: 0 10px; border-collapse: separate;"
  >
    <tbody
      class="table-light"
    >
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white text-muted"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
      <tr>
        <td
          class="table-secondary py-4 align-middle w-25"
        >
          <a
            class="link-light"
            href="https://release_link_mock/"
          >
            <span
              class="text-white"
            >
              release_name_mock
            </span>
          </a>
          <span
            class="text-white d-block m-2"
          >
            Temurin 
            <svg
              data-placement="bottom"
              data-toggle="tooltip"
              fill="currentColor"
              height="25"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(83, 127, 185);"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                This build is JCK certified
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
              />
            </svg>
            <a
              href="/aqavit"
            >
              <img
                alt="AQAvit logo"
                class="img-fluid"
                data-placement="bottom"
                data-toggle="tooltip"
                src="/images/aqavit-icon.png"
                title="This build is AQAvit Verified"
                width="25"
              />
            </a>
          </span>
          <span
            class="text-white text-muted"
          >
            January 1, 2020
          </span>
        </td>
        <td
          class="align-middle w-20"
        >
          Os_mock
        </td>
        <td
          class="align-middle w-20"
        >
          arch_mock
        </td>
        <td
          class="align-middle"
        >
          <table
            class="table parent mb-0 w-auto"
          >
            <tbody
              class="table-light"
            >
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="installer_checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    installer_extension_mock
                  </a>
                </td>
              </tr>
              <tr>
                <td
                  class="align-middle text-center"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          type_mock - 0 MB
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <span
                            class="fw-light"
                          >
                            <a
                              data-bs-checksum="checksum_mock"
                              data-bs-target="#checksumModal"
                              data-bs-toggle="modal"
                              href=""
                            >
                              <small>
                                Text
                              </small>
                            </a>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  class="align-middle"
                >
                  <a
                    class="btn btn-primary"
                    href="/download"
                    state="[object Object]"
                    style="width: 6em;"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      />
                    </svg>
                     
                    extension_mock
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
